# jetpack2Tek4

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  _a_component_8hpp_source.html  _a_scene_8hpp_source.html  _a_system_8hpp_source.html  _animate_8hpp_source.html  _animation_database_8hpp_source.html  _animation_frame_8hpp_source.html  _click_8hpp_source.html  _clickable_8hpp_source.html  _client_8hpp_source.html  _collider_8hpp_source.html  _collider_reaction_8hpp_source.html  _controll_8hpp_source.html  _controllable_8hpp_source.html  _display_8hpp_source.html  _drawable_8hpp_source.html  _drawable_client_side_8hpp_source.html  _drawable_server_side_8hpp_source.html  _ecs_8hpp_source.html  _entity_8hpp_source.html  _entity_generator_8hpp_source.html  _entity_manager_8hpp_source.html  _exception_8hpp_source.html  _fire_8hpp_source.html  _game_scene_8hpp_source.html  _hit_box_8hpp_source.html  _hub_8hpp_source.html  _i_component_8hpp_source.html  _i_scene_8hpp_source.html  _i_system_8hpp_source.html  _input_8hpp_source.html  _lobby_8hpp_source.html  _main_menu_8hpp_source.html  _move_8hpp_source.html  _position_8hpp_source.html  _scene_manager_8hpp_source.html  (+423 more)
cmake/: conanbuildinfo.cmake
search/: all_0.js  all_1.js  (+54 more)
src/client/: CMakeLists.txt  Client.cpp  Client.hpp  Communicator.cpp  Communicator.hpp  Test.cpp  Test.hpp  TestGame.cpp  TestGame.hpp  TextureDatabase.cpp  TextureDatabase.hpp  main.cpp
src/client/assetsManager/: AnimationDatabase.cpp  AnimationDatabase.hpp  CMakeLists.txt  TextureDatabase.cpp  TextureDatabase.hpp  fileOpener.cpp
src/client/configs/Hub/TextureConfigs/: TextureConfiguration.json
src/client/configs/Lobby/TextureConfigs/: TextureConfiguration.json
src/client/configs/MainMenu/TextureConfigs/: TextureConfiguration.json
src/client/ecs/: Ecs.cpp  Ecs.hpp
src/client/ecs/components/: AnimationFrame.cpp  AnimationFrame.hpp  CMakeLists.txt  Clickable.cpp  Clickable.hpp  Controllable.hpp  Drawable.cpp  Drawable.hpp  DrawableClientSide.cpp  DrawableClientSide.hpp  DrawableServerSide.cpp  DrawableServerSide.hpp  Position.hpp  Selectable.cpp  Selectable.hpp  Stat.cpp  Stat.hpp  Text.cpp  Text.hpp  TextBox.cpp  TextBox.hpp  Type.hpp  Weapon.cpp  Weapon.hpp
src/client/ecs/entity/: CMakeLists.txt  Entity.cpp  Entity.hpp  EntityGenerator.cpp  EntityGenerator.hpp  EntityManager.cpp  EntityManager.hpp  componentAdder.cpp  componentAdder.hpp
src/client/ecs/enums/: CMakeLists.txt
src/client/ecs/exceptions/: CMakeLists.txt  Exception.cpp  Exception.hpp
src/client/ecs/systems/: ASystem.cpp  ASystem.hpp  Animate.cpp  Animate.hpp  CMakeLists.txt  Click.cpp  Click.hpp  Collider.cpp  Collider.hpp  ColliderReaction.cpp  ColliderReaction.hpp  Controll.cpp  Controll.hpp  Display.cpp  Display.hpp  Fire.cpp  Fire.hpp  ISystem.hpp  Input.cpp  Input.hpp  Move.cpp  Move.hpp  WriteInBox.cpp  WriteInBox.hpp
src/client/game/: CMakeLists.txt  EnemyWave.cpp  EnemyWave.hpp  Timer.cpp  Timer.hpp
src/client/scenes/: AScene.cpp  AScene.hpp  CMakeLists.txt  GameScene.cpp  GameScene.hpp  Hub.cpp  Hub.hpp  IScene.hpp  Lobby.cpp  Lobby.hpp  MainMenu.cpp  MainMenu.hpp  SceneManager.cpp  SceneManager.hpp  SceneSystem.cpp  SceneSystem.hpp  allScenes.hpp
src/game/: CMakeLists.txt  Client.cpp  Client.hpp  Entity.cpp  Entity.hpp  EntityMap.cpp  EntityMap.hpp  Registery.cpp  Registery.hpp  SparseArray.cpp  SparseArray.hpp  SpritesMap.cpp  SpritesMap.hpp  TextureDatabase.cpp  TextureDatabase.hpp  data.hpp  enum.hpp  main.cpp
src/game/client/: CMakeLists.txt  Client.cpp  Client.hpp  SpritesMap.hpp  TextureDatabase.cpp  TextureDatabase.hpp  data.hpp
src/game/client/scenes/: AScene.cpp  AScene.hpp  CMakeLists.txt  GameScene.cpp  GameScene.hpp  IScene.hpp  MainMenu.cpp  MainMenu.hpp  SceneSystem.cpp  SceneSystem.hpp
src/game/components/: AComponent.cpp  AComponent.hpp  CMakeLists.txt  Controllable.cpp  Controllable.hpp  Drawable.cpp  Drawable.hpp  IComponent.hpp  Position.cpp  Position.hpp  Velocity.cpp  Velocity.hpp
src/game/ecs/: CMakeLists.txt  Ecs.cpp  Ecs.hpp
src/game/ecs/components/: AComponent.cpp  AComponent.hpp  CMakeLists.txt  Controllable.cpp  Controllable.hpp  Drawable.cpp  Drawable.hpp  HitBox.cpp  HitBox.hpp  IComponent.hpp  Position.cpp  Position.hpp  Type.cpp  Type.hpp  Velocity.cpp  Velocity.hpp  Weapon.cpp  Weapon.hpp
src/game/ecs/entity/: CMakeLists.txt  Entity.cpp  Entity.hpp  EntityGenerator.cpp  EntityGenerator.hpp
src/game/ecs/enums/: CMakeLists.txt  Event.hpp  controlls.hpp  entityTypes.hpp  event.hpp  weapons.hpp
src/game/ecs/exceptions/: Exception.cpp  Exception.hpp
src/game/ecs/systems/: ASystem.cpp  ASystem.hpp  CMakeLists.txt  Collider.cpp  Collider.hpp  ColliderReaction.cpp  ColliderReaction.hpp  Controll.cpp  Controll.hpp  Display.cpp  Display.hpp  Fire.cpp  Fire.hpp  ISystem.hpp  Input.cpp  Input.hpp  Move.cpp  Move.hpp
src/game/systems/: Display.cpp  Display.hpp
src/network/: CMakeLists.txt  config.ini  main.cpp
src/network/config/: Loadconfig.cpp  Loadconfig.hpp
src/network/exception/: CMakeLists.txt  Exception.cpp  Exception.hpp
src/network/initialization/: CMakeLists.txt  Loadconfig.cpp  Loadconfig.hpp  configuration.cpp
src/server/: CMakeLists.txt  Communicator.cpp  Communicator.hpp  Server.cpp  Server.hpp  Test.cpp  Test.hpp  main.cpp
src/server/assetsManager/: AnimationDatabase.cpp  CMakeLists.txt  TextureDatabase.hpp  fileOpener.hpp
src/server/config/: CMakeLists.txt  Loadconfig.cpp  Loadconfig.hpp
src/server/ecs/: CMakeLists.txt  Ecs.hpp
src/server/ecs/components/: AnimationFrame.cpp  CMakeLists.txt  Controllable.hpp  Selectable.hpp  Text.cpp  Type.cpp  Weapon.cpp
src/server/ecs/entity/: Entity.hpp  EntityGenerator.cpp  EntityGenerator.hpp  EntityManager.cpp  EntityManager.hpp  componentAdder.cpp
src/server/ecs/exceptions/: Exception.hpp
src/server/ecs/systems/: ASystem.hpp  Animate.cpp  Collider.hpp  Controll.cpp  Controll.hpp  Display.cpp  Display.hpp  Fire.cpp  Move.cpp  Move.hpp
src/server/exception/: Exception.cpp  Exception.hpp
src/server/initialization/: CMakeLists.txt
(+17 files in other folders)
